# gdk

./: .gitignore  .gitmodules  configure.ac
src/: Makefile.am  config.h.in  greenaddress.pc  greenaddress.pc.in  version.h.in
tools/: build_deps.sh
